--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="D:\Web Development\HTML - Personal Site\Rishabh.bmp" alt="Rishabh Profile Pic">
+      <td><img src="https://github.com/rishabhsetiya/cv/blob/master/Rishabh.bmp" alt="Rishabh Profile Pic">
       </td>
       <td>
         <h1>Rishabh Setiya</h1>
