--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
     a{ color:var(--link); text-decoration:none }
     a:hover{ text-decoration:underline }
     .wrap{ max-width:1100px; margin:0 auto; padding:28px 18px 80px }
-    header.hero{
-      display:grid; grid-template-columns: 120px 1fr; gap:18px; align-items:center; margin-top:10px;
-      padding:18px; border-radius:18px; background:linear-gradient(180deg, rgba(18,24,34,.9), rgba(18,24,34,.7));
-      box-shadow: var(--shadow); border:1px solid rgba(255,255,255,.06);
+      header.hero {
+      background: linear-gradient(135deg, #1e3a8a, #2563eb);
+      color: white;
     }
     .avatar{
       width:110px; height:110px; border-radius:20px; background:var(--chip);
@@ -98,7 +97,7 @@
 <body>
   <div class="wrap">
     <header class="hero">
-      <div class="avatar" aria-hidden="true">RS</div>
+      <img src="Rishabh.bmp" alt="Rishabh Setiya" class="avatar" />
       <div>
         <h1>Rishabh Setiya</h1>
         <div class="role">Senior Software Engineer — MakeMyTrip</div>
@@ -275,3 +274,4 @@
   </script>
 </body>
 </html>
+
