--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="grid-2 timeline">
         <div class="item">
           <h3>MakeMyTrip — Senior Software Engineer I</h3>
-          <div class="sub">Apr 2025 — Present • Gurugram / Pune, India</div>
+          <div class="sub">Apr 2025 — Present • Gurugram, India</div>
           <ul>
             <li>Build critical features for <strong>MyBiz</strong> (corporate travel).</li>
             <li>Integrated <strong>MyBiz wallet</strong> as a payment gateway for partner companies (daily/monthly limits).</li>
@@ -291,3 +291,4 @@
   </script>
 </body>
 </html>
+
